--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&display=swap');
 .App {
   text-align: center;
 }
@@ -34,5 +35,43 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.container {
+  display: grid;
+
+  grid-template-columns: 2% 1fr;
+  grid-template-rows: 72px 1fr;
+
+  grid-template-areas:
+
+  "sidebar head head head"
+  "sidebar main main main"
+  "sidebar main main main"
+  "sidebar main main main";
+
+  /* grid-container height = 100% of viewport height */
+  height: 100vh;
+}
+
+.grid-sidebar {
+  grid-area: sidebar;
+  z-index: 2000000;
+}
+.header {
+  grid-area: head;
+  box-shadow:0 0 5px rgba(0, 0, 0, 0.1);
+}
+.content {
+  grid-area: main;
+}
+@media screen and (max-width: 375px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 72px 1fr;
+    grid-template-areas:
+    "head"
+    "main";
   }
 }
